--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,5 @@
 FLASK_ENV='development'
+CLIENT_ID='IXTvIQaIewLYZQ'
+SECRET_KEY='AarsotmkS_kOFa_iQfd00HcEug3eAg'
+USERNAME='OneBigBurrito87'
+PASSWORD='shiv2007'
