--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "bootstrap": "^4.6.0",
         "react": "^17.0.2",
+        "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
