--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
+        "chart.js": "^3.3.2",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.0",
+        "react-chartjs-2": "^3.0.3",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
         "react-scripts": "4.0.3",
