--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-chartjs-2": "^3.0.3",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2"
